# ai-deep-dive

./: .gitignore  README.md  challenge_architecture.md
cli/: README.md  pyproject.toml
cli/src/ai_deep_dive/: __init__.py  cli.py  config.py  course_loader.py  finder.py  manifest.py  runner.py  sync.py
cli/src/ai_deep_dive/commands/: __init__.py  _context.py  _results.py  config.py  init.py  list.py  status.py  submit.py  sync.py  test.py
judge/: README.md  pyproject.toml
judge/deploy/: README.md  apply.sh  bootstrap.sh  judge-api.service  judge-backup.service  judge-backup.timer  judge-cleanup.service  judge-cleanup.timer  judge-metrics-init.service  judge-worker-light.service  judge-worker-light@.service  judge-worker-torch.service  judge-worker-torch@.service  judge.env.example  nsjail.cfg  update-vm.sh  verify.sh
judge/deploy/monitoring/: alertmanager.env.example  alertmanager.yml.template  apply-alertmanager.sh  apply-grafana.sh  apply-prometheus.sh  grafana-dashboard-provider.yml.template  grafana-datasource.yml.template  install-monitoring.sh  judge-alerts.yml  prometheus.yml.template  send-test-alert.sh
judge/deploy/monitoring/grafana/: judge-overview.json
judge/deploy/nginx/: cloudflare-realip.conf  judge.conf.template  judge.http.conf.template  judge.https.conf.template  ratelimit.conf
judge/deploy/systemd/: worker-override.conf
judge/problems/: README.md
judge/problems/build-gpt/01-from-text-to-bytes/01-encoder/: hidden_tests.json  manifest.json  problem.json  public_cases.json  public_tests.json  starter.py
judge/problems/build-gpt/01-from-text-to-bytes/02-byte-inspector/: hidden_tests.json  manifest.json  problem.json  public_cases.json  public_tests.json  starter.py
judge/problems/build-gpt/02-tokenization/01-pair-counter/: hidden_tests.json  manifest.json  problem.json  public_cases.json  public_tests.json  starter.py
judge/scripts/: build_runtime_problem_corpus.py  export_public_tests.py  export_tests_endpoint.py  generate_hidden_tests.py  generate_manifests.py  migrate_problem_format.py  migrate_tests.py  validate_problem_contracts.py  warm_fork_security_probe.py
judge/src/judge/: __init__.py  api.py  backup.py  cleanup.py  config.py  metrics.py  models.py  problem_contracts.py  problem_migration.py  problems.py  queue.py  results.py  runner.py  runtime_problem_corpus.py  services.py  warm_executor.py  worker.py
judge/src/judge/tests/: test_api_problems_endpoint.py  test_api_readiness.py  test_api_result_contract.py  test_api_result_endpoint.py  test_api_run_endpoint.py  test_api_submit_capacity.py  test_backup.py  test_config_warm_fork.py  test_deploy_env_example.py  test_e2e_submit_result_flow.py  test_generate_hidden_tests.py  test_integration_redis_worker.py  test_problem_contracts.py  test_problem_corpus_contract.py  test_problem_migration.py  test_problems.py  test_queue.py  test_results.py  test_results_idempotency.py  test_runner.py  test_runtime_problem_corpus.py  test_services_execution_edges.py  test_services_flow.py  test_services_submission_edges.py  test_warm_executor.py  test_worker.py  test_worker_dependencies.py  test_worker_processing.py
(+352 files in other folders)
