[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-deep-dive-judge"
version = "0.1.0"
description = "Hybrid judge backend for AI Deep Dive"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["judge", "education", "python", "llm"]
authors = [
    { name = "AI Deep Dive Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "prometheus_client>=0.20.0",
    "redis>=5.0.0",
    "torch>=2.2.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://aideep.dev"
Repository = "https://github.com/aideep-dive/ai-deep-dive"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
